--- a/index.html
+++ b/index.html
@@ -1,69 +1,130 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Aparecida Nutrição</title>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
-	</head>
-	<body>
-		<header>
-			<div class="container">
-				<h1 class="titulo">Aparecida Nutrição</h1>
-			</div>
-		</header>
-		<main>
-			<section class="container">
-				<h2>Meus pacientes</h2>
-				<label for="filtrar-tabela">filtre:</label>
-				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o Nome">
-				<table>
-					<thead>
-						<tr>
-							<th>Nome</th>
-							<th>Peso(kg)</th>
-							<th>Altura(m)</th>
-							<th>Gordura Corporal(%)</th>
-							<th>IMC</th>
-						</tr>
-					</thead>
-					<tbody id="tabela-pacientes">
-						
-					</tbody>
-				</table>
-				<button id="buscar-pacientes" class="botao bto-principal">buscar paciente</button>
-			</section>
-		</main>
-		
-		<section class="container">
-			<h2 id="titulo-form">Adicionar novo paciente</h2>
-			<form id="formAd">
-				<div class="grupo">
-					<label for="nome">Nome:</label>
-					<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
-				</div>
-				<div class="grupo">
-					<label for="peso">Peso:</label>
-					<input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
-				</div>
-				<div class="grupo">
-					<label for="altura">Altura:</label>
-					<input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
-				</div>
-				<div class="grupo">
-					<label for="gordura">% de Gordura:</label>
-					<input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
-				</div>
-		
-				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
-			</form>
-		</section>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Calculadora</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <h1 class="titulo">Calculadora</h1>
+      </div>
+    </header>
+    <main>
+      <section class="container">
+        <h2>Meus Produtos</h2>
+        <div class="filtro">
+          <label class="filtrarText" for="filtrar-tabela">Filtrar:</label>
+          <input
+            type="text"
+            name="filtro"
+            id="filtrar-tabela"
+            placeholder="Digite o Nome"
+          />
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Valor A</th>
+              <th>Valor B</th>
+              <th>Multi 1</th>
+              <th>Multi 2</th>
+              <th>CXA</th>
+              <th>Qtd</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody id="tabela-produtos"></tbody>
+        </table>
+      </section>
+    </main>
 
-		<script src="js/calcula.js"></script>
-		<script src="js/form.js"></script>
-		<script src="js/removerPaciente.js"></script>
-		<script src="js/filtra.js"></script>
-		<script src="js/buscarPacientes.js"></script>
-	</body>
+    <section class="container">
+      <h2 id="titulo-form">Adicionar novo produto</h2>
+      <form id="formAd">
+        <div class="grupo">
+          <label for="nome">Nome:</label>
+          <input
+            id="nome"
+            name="nome"
+            type="text"
+            placeholder="Digite o nome"
+            class="campo"
+          />
+        </div>
+        <div class="grupo">
+          <label for="valorA">Valor A:</label>
+          <input
+            id="valorA"
+            name="valorA"
+            type="text"
+            placeholder="Digite o Valor A"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="valorB">Valor B:</label>
+          <input
+            id="valorB"
+            name="valorB"
+            type="text"
+            placeholder="Digite o Valor B"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="multi1">Multi 1:</label>
+          <input
+            id="multi1"
+            name="multi1"
+            type="text"
+            placeholder="Digite o Multi 1"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="multi2">Multi 2:</label>
+          <input
+            id="multi2"
+            type="text"
+            placeholder="Digite o Multi 2"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="cxa">CXA:</label>
+          <input
+            id="cxa"
+            name="cxa"
+            type="text"
+            placeholder="Digite o CXA"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="qtd">QTD:</label>
+          <input
+            id="qtd"
+            name="qtd"
+            type="text"
+            placeholder="Digite a quantidade"
+            class="campo campo-medio"
+          />
+        </div>
+
+        <button id="adicionar-produto" class="botao bto-principal">
+          Adicionar
+        </button>
+      </form>
+    </section>
+
+    <script src="js/calcula.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/removerproduto.js"></script>
+    <script src="js/filtra.js"></script>
+  </body>
 </html>
