--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <input
             id="valorA"
             name="valorA"
-            type="text"
+            type="number"
             placeholder="Digite o Valor A"
             class="campo campo-medio"
           />
@@ -71,7 +71,7 @@
           <input
             id="valorB"
             name="valorB"
-            type="text"
+            type="number"
             placeholder="Digite o Valor B"
             class="campo campo-medio"
           />
@@ -81,7 +81,7 @@
           <input
             id="multi1"
             name="multi1"
-            type="text"
+            type="number"
             placeholder="Digite o Multi 1"
             class="campo campo-medio"
           />
@@ -90,7 +90,7 @@
           <label for="multi2">Multi 2:</label>
           <input
             id="multi2"
-            type="text"
+            type="number"
             placeholder="Digite o Multi 2"
             class="campo campo-medio"
           />
@@ -100,7 +100,7 @@
           <input
             id="cxa"
             name="cxa"
-            type="text"
+            type="number"
             placeholder="Digite o CXA"
             class="campo campo-medio"
           />
@@ -110,7 +110,7 @@
           <input
             id="qtd"
             name="qtd"
-            type="text"
+            type="number"
             placeholder="Digite a quantidade"
             class="campo campo-medio"
           />
